{
    "name": "PlayerMove",
    "maps": [
        {
            "name": "Player",
            "id": "2d350e59-3857-4eb4-bbfd-3ed79c8e875a",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "e61f3a8c-4951-4a52-921a-3889e6f149dd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "0a7ae331-89c3-4daf-b33b-cbfe8b7a0550",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressA",
                    "type": "Button",
                    "id": "bcd6abf5-db59-48ff-8f9a-ccdc2ea534f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressX",
                    "type": "Button",
                    "id": "fa244371-a7b3-4b68-8ef9-31528f579ec0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressY",
                    "type": "Button",
                    "id": "3fd4813a-1a27-45ed-bb78-be0a7a8d5dc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PressB",
                    "type": "Button",
                    "id": "7a790fd2-8914-41a4-9fc9-21c46d86a771",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34dc8e36-43fe-4370-98a8-932f6ca13e11",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7edfe4cb-18d6-479e-a40b-2df0758bec3c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PressA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43797bb5-b7fb-44de-9b7f-94ec04529aa2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb65febe-2681-4591-b920-f1490e0469fc",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82090179-9723-4056-9ea5-b2d8a4ea9c77",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7656bac7-e962-493b-8656-34cb5a711be6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "9850ba7e-e3e5-4b8f-8d03-4840af9ca3a9",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "6825df35-c5ae-41f8-9fa6-14384383ab79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Navigate",
                    "type": "PassThrough",
                    "id": "f1ab2045-541a-4736-bf65-6499f7586a32",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "0ce2a392-8c09-4498-a75b-a5842c7d90c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3569b0d-66bc-4b18-bca1-bc4e207720ab",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d199e23e-9367-4b5e-97aa-30fd772a3a3a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "351ae3aa-4dfe-471e-97a7-5d47db8ddea0",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}